; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_asmshader.yy.c_SlAssembleShader.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_asmshader.yy.c_SlAssembleShader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwriter_shader = type { i32 }

@.str = private unnamed_addr constant [8 x i8] c"%p, %p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.bwriter_shader* @SlAssembleShader(i8* %0, i8** %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca %struct.bwriter_shader*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8** %1, i8*** %4, align 8
  store %struct.bwriter_shader* null, %struct.bwriter_shader** %5, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = load i8**, i8*** %4, align 8
  %9 = call i32 @TRACE(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* %7, i8** %8)
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @asmshader__scan_string(i8* %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @asmshader__switch_to_buffer(i32 %12)
  %14 = load i8**, i8*** %4, align 8
  %15 = call %struct.bwriter_shader* @parse_asm_shader(i8** %14)
  store %struct.bwriter_shader* %15, %struct.bwriter_shader** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @asmshader__delete_buffer(i32 %16)
  %18 = load %struct.bwriter_shader*, %struct.bwriter_shader** %5, align 8
  ret %struct.bwriter_shader* %18
}

declare dso_local i32 @TRACE(i8*, i8*, i8**) #1

declare dso_local i32 @asmshader__scan_string(i8*) #1

declare dso_local i32 @asmshader__switch_to_buffer(i32) #1

declare dso_local %struct.bwriter_shader* @parse_asm_shader(i8**) #1

declare dso_local i32 @asmshader__delete_buffer(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
